@@ -70,8 +70,8 @@ libwebkitgtk_@WEBKITGTK_API_MAJOR_VERSION@_@WEBKITGTK_API_MINOR_VERSION@_la_CPPF
 	$(LIBXSLT_CFLAGS) \
 	$(SQLITE3_CFLAGS) \
 	$(UNICODE_CFLAGS) \
-	$(XCOMPOSITE_LIBS) \
-	$(XDAMAGE_LIBS) \
+	$(XCOMPOSITE_CFLAGS) \
+	$(XDAMAGE_CFLAGS) \
 	$(XT_CFLAGS) \
 	$(ZLIB_CFLAGS)
 
@@ -441,8 +441,8 @@ webkit_tests_cflags = \
 	$(GLIB_CFLAGS) \
 	$(GTK_CFLAGS) \
 	$(LIBSOUP_CFLAGS) \
-	$(XRENDER_LIBS) \
-	$(XT_LIBS)
+	$(XRENDER_CFLAGS) \
+	$(XT_CFLAGS)
 
 webkit_tests_ldadd = \
 	libjavascriptcoregtk-@WEBKITGTK_API_MAJOR_VERSION@.@WEBKITGTK_API_MINOR_VERSION@.la \
